--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -62,15 +62,25 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <!-- Profile Icon (Current Page) -->
-            <ImageView
-                android:id="@+id/profileIcon"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+            <TextView
+                android:id="@+id/logoutButton"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:fontFamily="@font/comic_relief"
+                android:gravity="center"
+                android:paddingBottom="12dp"
+                android:paddingTop="12dp"
+                android:text="LOGOUT"
+                android:textColor="#051646"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/profileTitle"
+                app:layout_constraintStart_toEndOf="@id/settingsIcon"
+                app:layout_constraintTop_toTopOf="parent"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
-                android:focusable="true"
-                android:src="@mipmap/profile_icon_foreground" />
+                android:focusable="true"/>
 
             <!-- Settings Icon - Navigates to Settings Page -->
             <ImageView
